Migrate assertions to AssertJ where it makes sense